--- a/cs/mail/chrome/messenger/messenger.properties
+++ b/cs/mail/chrome/messenger/messenger.properties
@@ -62,8 +62,8 @@ LoadingMessageToPrint=Načítám zprávu pro tisk…
 MessageLoaded=Zpráva nahrána…
 PrintingMessage=Tisk zprávy…
 PrintPreviewMessage=Náhled zprávy před tiskem…
-PrintingCard=Tisk kontaktu…
-PrintPreviewCard=Tisk náhledu kontaktu…
+PrintingContact=Tisk kontaktu…
+PrintPreviewContact=Tisk náhledu kontaktu…
 PrintingAddrBook=Tisknu kontakty…
 PrintPreviewAddrBook=Náhled tisku složky…
 PrintingComplete=Tisk je dokončen.
