--- a/cs/mail/chrome/messenger/addressbook/addressBook.properties
+++ b/cs/mail/chrome/messenger/addressbook/addressBook.properties
@@ -130,10 +130,15 @@ noMatchFound=Nenalezen žádný výskyt
 matchFound=Nalezen jeden výskyt
 matchesFound=Nalezeno %S výskytů
 
-cardsCopied=%S kontaktů zkopírováno
-cardCopied=Zkopírován 1 kontakt
-cardsMoved=%S kontaktů přesunuto
-cardMoved=Přesunut 1 kontakt
+## LOCALIZATION NOTE (contactsCopied): Semi-colon list of plural forms
+## %1$S is the number of contacts that were copied. This should be used multiple
+## times wherever you need it. Do not replace by %S.
+contactsCopied=Zkopírován %1$S kontakt;Zkopírovány %1$S kontakty;Zkopírováno %1$S kontaktů
+
+## LOCALIZATION NOTE (contactsMoved): Semi-colon list of plural forms
+## %1$S is the number of contacts that were moved. This should be used multiple
+## times wherever you need it. Do not replace by %S.
+contactsMoved=Přesunut %1$S kontakt;Přesunuty %1$S kontakty;Přesunuto %1$S kontaktů
 
 # LDAP directory stuff
 invalidName=Zadejte prosím platné jméno.
