update mobile to trunk

--- a/pl/mobile/chrome/browser.properties
+++ b/pl/mobile/chrome/browser.properties
@@ -1,3 +1,7 @@
+# Bookmarks                                                                                                                
+editBookmarkAddFolder=Dodaj nowy folder
+editBookmarkNewFolder=Nowy folder
+
 # Popup Blocker
 popupWarning=Program %S nie pozwolił tej witrynie na otwieranie wyskakujących okien.
 popupWarningMultiple=Program %S nie pozwolił tej witrynie na otwarcie %S wyskakujących okien.
