--- a/de/mail/chrome/messenger/search-attributes.properties
+++ b/de/mail/chrome/messenger/search-attributes.properties
@@ -1,57 +1,39 @@
 #these need to match nsMsgSearchAttrib interface in nsMsgSearchCore.idl
-0=Betreff
-1=Von
-2=Nachrichtentext
-3=Datum
-4=Priorität
-5=Status
-6=An
-7=CC
-8=An oder CC
-# 9 not visible
-9=Adresse
-# 10 not visible
-10=Nachrichtenschlüssel
-11=Alter in Tagen
-# 12 not visible
-12=Ordnerinformation
-13=Größe (KB)
-# 14 not visible
-14=IrgendeinText
-15=Schlagwörter
-# for AB and LDAP
-16=Beliebiger Name
-17=Anzeigename
-18=Spitzname
-19=Messenger-Name
-20=E-Mail
-21=zusätzliche E-Mail
-22=Beliebige Nummer
-23=Tel. dienstlich
-24=Tel. privat
-25=Fax
-26=Pager
-27=Mobil
-28=Ort
-29=Straße
-30=Titel
-31=Organisation
-32=Abteilung
-33=reserviert für AB
-34=reserviert für AB
-35=reserviert für AB
-36=reserviert für AB
-37=reserviert für AB
-38=reserviert für AB
-39=reserviert für AB
-40=reserviert für AB
-41=reserviert für AB
-42=reserviert für AB
-43=Von, An, CC oder BCC
-44=Ursprung der Junk-Bewertung
-45=Prozentuale Junk-Bewertung
-46=Anhang-Status
-47=Junk-Status
-48=Schlagwort
-49=Anpassen…
-# don't use above 49
+#and nsMsgSearchAttribMap in nsMsgSearchAdapter.cpp
+Subject=Betreff
+From=Von
+Body=Nachrichtentext
+Date=Datum
+Priority=Priorität
+Status=Status
+To=An
+Cc=CC
+ToOrCc=An oder CC
+AgeInDays=Alter in Tagen
+SizeKB=Größe (KB)
+Tags=Schlagwörter
+AnyName=Beliebiger Name
+DisplayName=Anzeigename
+Nickname=Spitzname
+ScreenName=Messenger-Name
+Email=E-Mail
+AdditionalEmail=zusätzliche E-Mail
+AnyNumber=Beliebige Nummer
+WorkPhone=Tel. dienstlich
+HomePhone=Tel. privat
+Fax=Fax
+Pager=Pager
+Mobile=Mobil
+City=Ort
+Street=Straße
+Title=Titel
+Organization=Organisation
+Department=Abteilung
+# more mailnews
+FromToCcOrBcc=Von, An, CC oder BCC
+JunkScoreOrigin=Ursprung der Junk-Bewertung
+JunkPercent=Prozentuale Junk-Bewertung
+AttachmentStatus=Anhang-Status
+JunkStatus=Junk-Status
+Label=Schlagwort
+Customize=Anpassen…
