--- a/pl/mail/chrome/messenger/search-attributes.properties
+++ b/pl/mail/chrome/messenger/search-attributes.properties
@@ -1,56 +1,38 @@
-0=Temat
-1=Nadawca
-2=Treść
-3=Data
-4=Priorytet
-5=Status
-6=Adresat
-7=Adresat kopii
-8=Adresat lub Adresat kopii
-# 9 not visible
-9=Lokalizacja
-# 10 not visible
-10=Klucz wiadomości
-11=Wiek w dniach
-# 12 not visible
-12=Informacje o folderze
-13=Rozmiar (KB)
-# 14 not visible
-14=Dowolny tekst
-15=Etykiety
+Subject=Temat
+From=Nadawca
+Body=Treść
+Date=Data
+Priority=Priorytet
+Status=Status
+To=Adresat
+Cc=Adresat kopii
+ToOrCc=Adresat lub Adresat kopii
+AgeInDays=Wiek w dniach
+SizeKB=Rozmiar (KB)
+Tags=Etykiety
 # for AB and LDAP
-16=Imię i nazwisko
-17=Wyświetlana nazwa
-18=Pseudonim
-19=Komunikator AIM
-20=E-mail
-21=Dodatkowy e-mail
-22=Dowolny numer
-23=Telefon służbowy
-24=Telefon domowy
-25=Fax
-26=Pager
-27=Telefon komórkowy
-28=Miasto
-29=Ulica
-30=Tytuł
-31=Firma/Organizacja
-32=Dział
-33=zarezerwowane dla AB
-34=zarezerwowane dla AB
-35=zarezerwowane dla AB
-36=zarezerwowane dla AB
-37=zarezerwowane dla AB
-38=zarezerwowane dla AB
-39=zarezerwowane dla AB
-40=zarezerwowane dla AB
-41=zarezerwowane dla AB
-42=zarezerwowane dla AB
-43=Od, Do, Kopia lub Ukryta kopia
-44=Źródło statusu niechcianej poczty
-45=Prawdopodobieństwo niechcianej poczty
-46=Status załącznika
-47=Status niechcianej poczty
-48=Etykieta
-49=Dostosuj…
-# don't use above 49
+AnyName=Imię i nazwisko
+DisplayName=Wyświetlana nazwa
+Nickname=Pseudonim
+ScreenName=Komunikator AIM
+Email=E-mail
+AdditionalEmail=Dodatkowy e-mail
+AnyNumber=Dowolny numer
+WorkPhone=Telefon służbowy
+HomePhone=Telefon domowy
+Fax=Fax
+Pager=Pager
+Mobile=Telefon komórkowy
+City=Miasto
+Street=Ulica
+Title=Tytuł
+Organization=Firma/Organizacja
+Department=Dział
+# more mailnews
+FromToCcOrBcc=Od, Do, Kopia lub Ukryta kopia
+JunkScoreOrigin=Źródło statusu niechcianej poczty
+JunkPercent=Prawdopodobieństwo niechcianej poczty
+AttachmentStatus=Status załącznika
+JunkStatus=Status niechcianej poczty
+Label=Etykieta
+Customize=Dostosuj…
