localize the last few untranslated strings in chatzilla

--- a/pl/extensions/irc/chrome/chatzilla.properties
+++ b/pl/extensions/irc/chrome/chatzilla.properties
@@ -272,7 +272,7 @@ cmd.dcc-send.help=Przesyła plik do użytkownika <nickname>. W oknie rozmowy par
 cmd.dcc-send.label=Wyślij plik…
 
 cmd.dcc-show-file.params=<file>
-cmd.dcc-show-file.help=Opens the folder containing the file you downloaded.
+cmd.dcc-show-file.help=Otwiera folder z pobranym plikiem.
 
 cmd.delete-view.key=accel W 
 cmd.delete-view.label=&Zamknij kartę 
@@ -795,7 +795,7 @@ msg.err.invalid.url=``%S'' nie jest prawidłowym adresem URL lub aliasem adresu,
 msg.err.no.channel=Podczas uruchamiania komendy ``%S'' należy podać nazwę kanału albo użyć komendy na karcie kanału.
 msg.err.no.idleservice=ChatZilla nie może określić kiedy użytkownik jest nieobecny w obecnie używanej wersji programu &brandShortName;. Funkcjonalność automatycznego określania nieobecności zostanie wyłączona.
 
-msg.warn.pac.loading=The automatic proxy configuration file has not loaded yet; ChatZilla will retry shortly.
+msg.warn.pac.loading=Plik do automatycznej konfiguracji proxy nie został jeszcze załadowany. ChatZilla niebawem ponowi próbę.
 
 # Specific bug messages.
 msg.bug318419.warning=ChatZilla wykryła potencjalną nieprawidłowość w swoich wewnętrznych danych. Nie ma możliwości komunikowania się w tej chwili, pomimo pozornej możliwości. Prawdopodobnie jest to spowodowane przez błąd Mozilli 318419 <https://bugzilla.mozilla.org/show_bug.cgi?id=318419>. Zalecany jest restart głównego programu (&brandShortName;), aby zapobiec ewentualnym problemom. 
@@ -975,7 +975,7 @@ msg.no.matching.nicks=Nie ma użytkowników spełniających warunki wyszukiwania
 msg.commands.header=Aby uzyskać informacje o sposobie użycia komendy, należy wprowadzić /help <nazwa-komendy>. 
 msg.matching.commands=Zaimplementowane w bieżącej wersji programu komendy pasujące do wzorca "%S" to [%S].\nNależy wprowadzić /help <nazwa-komendy>, aby uzyskać informacje o sposobie użycia danej komendy. 
 msg.all.commands=Komendy zaimplementowane w tej wersji ChatZilli: [%S]. 
-msg.help.intro=Help is available from many places:\n - |/commands| lists all the built-in commands in ChatZilla. Use |/help <command-name>| to get help on individual commands.\n - The IRC Help website <http://www.irchelp.org/> provides introductory material for new IRC users. \n - The ChatZilla website <http://chatzilla.hacksrus.com/> provides more information about IRC and ChatZilla, including the ChatZilla FAQ <http://chatzilla.hacksrus.com/faq>, which answers many common questions about using ChatZilla.
+msg.help.intro=Pomoc jest dostępna w wielu miejscach:\n - |/commands| wyświetla listę wszystkich poleceń wbudowanych w rozszerzenie ChatZilla. |/help <nazwa-komendy>| wyświetli pomoc dotyczącą wybranego polecenia.\n - Witryna pomocy IRC <http://www.irchelp.org/> (w j. ang.) udostępnia materiał wprowadzający dla nowych użytkowników IRC. \n - Witryna rozszerzenia ChatZilla <http://chatzilla.hacksrus.com/> zawiera dodatkowe informacje o IRC i rozszerzeniu ChatZilla, włączając w to FAQ rozszerzenia ChatZilla <http://chatzilla.hacksrus.com/faq>, które zawiera odpowiedzi na wiele częstych pytań odnośnie użytkowania rozszerzenia ChatZilla.
 msg.about.version="%S [[Szczegóły][Otwiera okno dialogowe ze szczegółowymi informacjami][%S]]
 msg.about.homepage=Proszę odwiedzić stronę domową ChatZilli pod adresem<http://chatzilla.hacksrus.com/>, aby uzyskać więcej informacji.
 msg.client.opened=Otwarto konsolę JavaScript dla karty "*Start*". 
@@ -1068,7 +1068,7 @@ msg.ctcphelp.ping=PING wysyła echo parametru przesłanego do klienta
 msg.ctcphelp.dcc=DCC wysyła żądanie połączenia bezpośredniego 
 
 # DCC CHAT messages.
-msg.dccchat.sent.request=Wysyłam propozycję chatu DCC do "%S" od CIEBIE (%S:%S) %S. 
+msg.dccchat.sent.request=Propozycja chatu DCC do "%S" od CIEBIE (%S:%S) %S została wysłana. 
 msg.dccchat.got.request=Otrzymano żądanie rozmowy DCC od "%S" (%S:%S) %S. 
 msg.dccchat.accepting=Propozycja chatu DCC z "%S" (%S:%S) zostanie automatycznie zaakceptowana w %S sekund %S. 
 msg.dccchat.accepting.now=Automatyczna akceptacja propozycji chatu DCC z "%S" (%S:%S). 
@@ -1083,7 +1083,7 @@ msg.dccchat.closed=Rozmowa DCC z "%S" (%S:%S) rozłączona.
 msg.dccfile.sent.request=Wysyłam propozycję przesłania pliku DCC do "%S" od CIEBIE (%S:%S) z "%S" (%S) %S. 
 msg.dccfile.got.request=Otrzymano propozycję przesyłu pliku DCC od "%S" (%S:%S) z "%S" (%S) %S. 
 msg.dccfile.accepting=Automatycznie zaakceptuję propozycję przesłania pliku DCC od "%S" (%S:%S) z "%S" (%S) w %S sekund %S. 
-msg.dccfile.accepting.now=Automatycznie akceptuję propozycję przesłania pliku DCC od "%S" (%S:%S) z "%S" (%S). 
+msg.dccfile.accepting.now=Automatyczne akceptowanie propozycji przesłania pliku DCC od "%S" (%S:%S) z "%S" (%S). 
 # 1 = file, 2 = to/from, 3 = nick, 4 = IP, 5 = port.
 msg.dccfile.accepted=Transfer DCC pliku "%S" %S "%S" (%S:%S) zaakceptowany. 
 msg.dccfile.declined=Transfer DCC pliku "%S" %S "%S" (%S:%S) odrzucony. 
@@ -1092,8 +1092,8 @@ msg.dccfile.failed=Transfer DCC pliku "%S" %S "%S" (%S:%S) zakończony niepowodz
 msg.dccfile.opened=Transfer DCC pliku "%S" %S "%S" (%S:%S) rozpoczęty. 
 msg.dccfile.closed.sent=Przesyłanie pliku DCC z "%S" %S "%S" (%S:%S) zakończone. 
 # 6 = path, 7 = command for opening the folder
-msg.dccfile.closed.saved=DCC File Transfer of ``%S'' %S ``%S'' (%S:%S) finished. File saved to ``%S''. [[Open Containing Folder][Open the folder containing the downloaded file][%S]]
-msg.dccfile.closed.saved.mac=DCC File Transfer of ``%S'' %S ``%S'' (%S:%S) finished. File saved to ``%S''. [[Show In Finder][Show the folder containing the file in Finder][%S]]
+msg.dccfile.closed.saved=Przesyłanie pliku DCC z ``%S'' %S ``%S'' (%S:%S) zakończone. Plik zapisany do ``%S''. [[Otwórz folder zawierający][Otwórz folder zawierający plik][%S]]
+msg.dccfile.closed.saved.mac=Przesyłanie pliku DCC z ``%S'' %S ``%S'' (%S:%S) zakończone. Plik zapisany do ``%S''. [[Pokaż w Finderze][Pokaż w Finderze folder zawierający plik][%S]]
 
 # 1 = percent, 2 = current pos, 3 = total size, 4 = speed.
 msg.dccfile.progress=%S%% ukończono, %S z %S, %S. 
@@ -1257,9 +1257,9 @@ msg.unknown.proxy.host=Nieznany host proxy łączy się do %S (%S).
 
 # In these messages, the first replacement string is a connection error from above.
 msg.connection.exhausted="%S Limit prób został wyczerpany. Zaniechano dalszych prób.
-msg.reconnecting.in="%S Reconnecting in %S. [[Cancel][Cancel reconnecting to %S][%S]]
-msg.reconnecting.in.left="%S %S attempts left, reconnecting in %S. [[Cancel][Cancel reconnecting to %S][%S]]
-msg.reconnecting.in.left1="%S 1 attempt left, reconnecting in %S. [[Cancel][Cancel reconnecting to %S][%S]]
+msg.reconnecting.in="%S ponowne łączenie za %S. [[Anuluj][Anuluj ponowne łączenie z %S][%S]]
+msg.reconnecting.in.left="%S pozostało %S prób, ponowne łączenie za %S. [[Anuluj][Anuluj ponowne łączenie z %S][%S]]
+msg.reconnecting.in.left1="%S pozostała 1 próba, ponowne łączenie za %S. [[Anuluj][Anuluj ponowne łączenie z %S][%S]]
 
 msg.reconnecting=Trwa ponowne łączenie…
 msg.confirm.disconnect.all=Na pewno rozłączyć połączenia ze WSZYSTKIMI serwerami? 
