L10n for:  Bug 485175 - [SeaMonkey] Some Mochitest geolocation tests fails now; (Av2) Port bug 483845 to SM (suite)

--- a/pl/suite/chrome/common/notification.properties
+++ b/pl/suite/chrome/common/notification.properties
@@ -23,12 +23,8 @@ xpinstallDisabledButton=Włącz
 xpinstallDisabledButton.accesskey=c
 
 # Geolocation UI
-# LOCALIZATION NOTE (exactLocation): This does not have to be an exact value,
-# instead an approximation would be fine.
-# example: Exact Location (within 3 m)
-#
-geolocation.requestMessage=%S chce poznać położenie geograficzne użytkownika. Przekaż:
-geolocation.exactLocation.label=dokładne położenie (w promieniu 3 m)
-geolocation.exactLocation.accesskey=d
-geolocation.nothingLocation.label=Nie przekazuj
-geolocation.nothingLocation.accesskey=N
+geolocation.tellThem=Przekaż informacje
+geolocation.tellThemKey=e
+geolocation.dontTellThem=Nie przekazuj
+geolocation.dontTellThemKey=N
+geolocation.siteWantsToKnow=%S chce poznać położenie geograficzne użytkownika.
