L10n for: Final part of bug 455246 - Change address book UI to refer to Contacts rather than Cards (suite)

--- a/pl/suite/chrome/mailnews/messenger.properties
+++ b/pl/suite/chrome/mailnews/messenger.properties
@@ -67,8 +67,8 @@ LoadingMessageToPrint=Wczytywanie wiadomości do drukowania…
 MessageLoaded=Wiadomość została wczytana…
 PrintingMessage=Drukowanie wiadomości…
 PrintPreviewMessage=Trwa przygotowywanie podglądu wydruku wiadomości…
-PrintingCard=Trwa drukowanie wizytówki…
-PrintPreviewCard=Trwa przygotowywanie podglądu wydruku wizytówki…
+PrintingContact=Drukowanie wizytówki…
+PrintPreviewContact=Przygotowywanie podglądu wydruku wizytówki…
 PrintingAddrBook=Trwa drukowanie książki adresowej…
 PrintPreviewAddrBook=Trwa przygotowywanie podglądu wydruku książki adresowej…
 PrintingComplete=Zakończono drukowanie.
