--- a/pl/suite/chrome/mailnews/addressbook/addressBook.properties
+++ b/pl/suite/chrome/mailnews/addressbook/addressBook.properties
@@ -126,7 +126,7 @@ ldap_2.servers.oe.description=Kontakty OE
 ldap_2.servers.osx.description=Systemowa książka adresowa
 
 # status bar stuff
-## LOCALIZATION NOTE (totalCardStatus): 
+## LOCALIZATION NOTE (totalContactStatus): 
 ## %1$S is address book name, %2$S is card count
 totalContactStatus=Wszystkich wizytówek w %1$S: %2$S
 ## LOCALIZATION NOTE (matchesFound):  do not localize %S
@@ -134,10 +134,15 @@ noMatchFound=Nie znaleziono adresów spełniających kryteria wyszukiwania
 matchFound=Znaleziono jeden adres spełniający kryteria wyszukiwania
 matchesFound=Liczba adresów spełniających kryteria wyszukiwania: %S
 
-cardsCopied=Liczba skopiowanych wizytówek: %S
-cardCopied=Skopiowano jedną wizytówkę
-cardsMoved=Liczba przeniesionych wizytówek: %S
-cardMoved=Przeniesiono jedną wizytówkę
+## LOCALIZATION NOTE (contactsCopied): Semi-colon list of plural forms
+## %1$S is the number of contacts that were copied. This should be used multiple
+## times wherever you need it. Do not replace by %S.
+contactsCopied=Skopiowano %1$S wizytówkę;Skopiowano %1$S wizytówki;Skopiowano %1$S wizytówek
+
+## LOCALIZATION NOTE (contactsMoved): Semi-colon list of plural forms
+## %1$S is the number of contacts that were moved. This should be used multiple
+## times wherever you need it. Do not replace by %S.
+contactsMoved=Przeniesiono %1$S wizytówkę;Przeniesiono %1$S wizytówki;Przeniesiono %1$S wizytówek
 
 # LDAP directory stuff
 invalidName=Proszę wprowadzić prawidłową nazwę.
