--- a/fr/mail/chrome/messenger/search-attributes.properties
+++ b/fr/mail/chrome/messenger/search-attributes.properties
@@ -1,57 +1,40 @@
 #these need to match nsMsgSearchAttrib interface in nsMsgSearchCore.idl
-0=Sujet
-1=De
-2=Corps
-3=Date
-4=Priorité
-5=Statut
-6=Pour
-7=Copie à
-8=Pour ou Copie à
-# 9 not visible
-9=Emplacement
-# 10 not visible
-10=Message Key
-11=Âge en jours
-# 12 not visible
-12=Info du dossier
-13=Taille (Ko)
-# 14 not visible
-14=Texte
-15=Étiquettes
+#and nsMsgSearchAttribMap in nsMsgSearchAdapter.cpp
+Subject=Sujet
+From=De
+Body=Corps
+Date=Date
+Priority=Priorité
+Status=Statut
+To=Pour
+Cc=Copie à
+ToOrCc=Pour ou Copie à
+AgeInDays=Âge en jours
+SizeKB=Taille (Ko)
+Tags=Étiquettes
 # for AB and LDAP
-16=N'importe quel nom
-17=Nom affiché
-18=Surnom
-19=Nom à l'écran
-20=E-mail
-21=E-mail alternatif
-22=N'importe quel numéro
-23=Téléphone professionnel
-24=Téléphone privé
-25=Fax
-26=Pager
-27=Portable
-28=Ville/Localité
-29=Rue
-30=Fonction
-31=Société
-32=Service
-33=reservé pour le carnet d'adresses
-34=reservé pour le carnet d'adresses
-35=reservé pour le carnet d'adresses
-36=reservé pour le carnet d'adresses
-37=reservé pour le carnet d'adresses
-38=reservé pour le carnet d'adresses
-39=reservé pour le carnet d'adresses
-40=reservé pour le carnet d'adresses
-41=reservé pour le carnet d'adresses
-42=reservé pour le carnet d'adresses
-43=De, Pour, Copie à ou Copie cachée à
-44=Origine de l'indice de spam
-45=Pourcentage d'indésirables
-46=Statut des pièces jointes
-47=Statut indésirable
-48=Étiquette
-49=Personnaliser…
-# don't use above 49
+AnyName=N'importe quel nom
+DisplayName=Nom affiché
+Nickname=Surnom
+ScreenName=Nom à l'écran
+Email=Adresse électronique
+AdditionalEmail=Autre adresse électronique
+AnyNumber=N'importe quel numéro
+WorkPhone=Téléphone professionnel
+HomePhone=Téléphone privé
+Fax=Fax
+Pager=Pager
+Mobile=Portable
+City=Ville/Localité
+Street=Rue
+Title=Fonction
+Organization=Société
+Department=Service
+# more mailnews
+FromToCcOrBcc=De, Pour, Copie à ou Copie cachée à
+JunkScoreOrigin=Origine de l'indice de spam
+JunkPercent=Pourcentage d'indésirables
+AttachmentStatus=Statut des pièces jointes
+JunkStatus=Statut indésirable
+Label=Étiquette
+Customize=Personnaliser…
