l10n for Bug 448029 - "Check for Updates" label and its variations need separate accesskeys

--- a/pl/browser/chrome/browser/browser.properties
+++ b/pl/browser/chrome/browser/browser.properties
@@ -81,12 +81,16 @@ sanitizeEverythingNoVisitsWarning=Cała historia zostanie wyczyszczona.
 # Check for Updates
 updatesItem_default=Sprawdź dostępność aktualizacji…
 updatesItem_defaultFallback=Sprawdź dostępność aktualizacji…
+updatesItem_default.accesskey=a
 updatesItem_downloading=Pobieranie elementu %S…
 updatesItem_downloadingFallback=Pobieranie aktualizacji…
+updatesItem_downloading.accesskey=a
 updatesItem_resume=Wznów pobieranie elementu %S…
+updatesItem_resume.accesskey=a
 updatesItem_resumeFallback=Wznów pobieranie aktualizacji…
 updatesItem_pending=Zastosuj pobraną aktualizację…
 updatesItem_pendingFallback=Zastosuj pobraną aktualizację…
+updatesItem_pending.accesskey=a
 
 # RSS Pretty Print
 feedShowFeedNew=Subskrybuj "%S"…
