l10n for  Bug 488574 -  remove hardcoded english strings caused by bug 488218

--- a/pl/browser/chrome/browser/browser.properties
+++ b/pl/browser/chrome/browser/browser.properties
@@ -172,6 +172,10 @@ geolocation.tellThemKey=e
 geolocation.dontTellThem=Nie przekazuj
 geolocation.dontTellThemKey=N
 geolocation.siteWantsToKnow=%S chce poznać położenie geograficzne użytkownika.
+# LOCALIZATION NOTE (geolocation.learnMore): Use the unicode ellipsis char, \u2026,
+# or use "..." unless \u2026 doesn't suit traditions in your locale.
+geolocation.learnMore=Więcej informacji…
+geolocation.remember=Zapamiętaj dla tej witryny
 
 # Phishing/Malware Notification Bar.
 # LOCALIZATION NOTE (notAForgery, notAnAttack)
