l10n for  Bug 427744 -  List Plugin File Version Number under about:plugins

--- a/pl/dom/chrome/plugins.properties
+++ b/pl/dom/chrome/plugins.properties
@@ -8,6 +8,7 @@ nopluginsareinstalled_label=Brak zainstalowanych wtyczek
 findmore_label=Więcej informacji o wtyczkach znajdziesz na
 installhelp_label=Pomoc dotycząca instalacji wtyczek jest dostępna na
 filename_label=Nazwa pliku:
+version_label=Wersja:
 mimetype_label=Typ MIME
 description_label=Opis
 suffixes_label=Rozszerzenia
