l10n for bug 305340 - front end for smart folders mode in folder pane

--- a/pl/mail/chrome/messenger/messenger.properties
+++ b/pl/mail/chrome/messenger/messenger.properties
@@ -342,6 +342,9 @@ folderPaneHeader_all       = Wszystkie foldery
 folderPaneHeader_unread    = Nieprzeczytane foldery
 folderPaneHeader_favorite  = Ulubione foldery
 folderPaneHeader_recent    = Ostatnie foldery
+# FIXME: smart folders, bmo bug 305340, bap 2424
+folderPaneHeader_smart     = Pogrupowane foldery
+smartAccountName           = Pogrupowane foldery
 
 # Copy / Move to Folder Again
 # LOCALIZATION NOTE %1$S is the name of the folder we will move to. moveToFolderAgainAccessKey
