attachment 374112  of bug 457393: nl localization updates as of April 22, 2009 => thunderbird

--- a/nl/mail/chrome/messenger/messenger.properties
+++ b/nl/mail/chrome/messenger/messenger.properties
@@ -62,8 +62,8 @@ LoadingMessageToPrint=Bericht laden om af te drukken…
 MessageLoaded=Bericht geladen…
 PrintingMessage=Bericht afdrukken…
 PrintPreviewMessage=Afdrukvoorbeeld bericht…
-PrintingCard=Kaart afdrukken…
-PrintPreviewCard=Afdrukvoorbeeld kaart…
+PrintingContact = Contact afdrukken…
+PrintPreviewContact = Afdrukvoorbeeld contact…
 PrintingAddrBook=Adresboek afdrukken…
 PrintPreviewAddrBook=Afdrukvoorbeeld adresboek…
 PrintingComplete=Klaar.
