--- a/nl/mail/chrome/messenger/addressbook/addressBook.properties
+++ b/nl/mail/chrome/messenger/addressbook/addressBook.properties
@@ -130,10 +130,15 @@ noMatchFound=Geen overeenkomsten gevonden
 matchFound=1 overeenkomst gevonden
 matchesFound=%S overeenkomsten gevonden
 
-cardsCopied=%S kaarten gekopieerd
-cardCopied=1 kaart gekopieerd
-cardsMoved=%S kaarten verplaatst
-cardMoved=1 kaart verplaatst
+## LOCALIZATION NOTE (contactsCopied): Semi-colon list of plural forms
+## %1$S is the number of contacts that were copied. This should be used multiple
+## times wherever you need it. Do not replace by %S.
+contactsCopied=%1$S contact gekopieerd;%1$S contacten gekopieerd
+
+## LOCALIZATION NOTE (contactsMoved): Semi-colon list of plural forms
+## %1$S is the number of contacts that were moved. This should be used multiple
+## times wherever you need it. Do not replace by %S.
+contactsMoved=%1$S contact verplaatst;%1$S contacten verplaatst
 
 # LDAP directory stuff
 invalidName=Voer een geldige naam in.
