Update nb-NO l10n

--- a/nb-NO/mail/chrome/messenger/messenger.properties
+++ b/nb-NO/mail/chrome/messenger/messenger.properties
@@ -433,6 +433,8 @@ folderPaneHeader_all=Alle mapper
 folderPaneHeader_unread=Uleste mapper
 folderPaneHeader_favorite=Favorittmapper
 folderPaneHeader_recent=Sist brukte mapper
+folderPaneHeader_smart=Smarte mapper
+smartAccountName=Smarte mapper
 
 # Copy / Move to Folder Again
 #LOCALIZATION NOTE %1$S is the name of the folder we will move to. moveToFolderAgainAccessKey
