--- a/de/calendar/chrome/calendar/calendar-event-dialog.properties
+++ b/de/calendar/chrome/calendar/calendar-event-dialog.properties
@@ -44,47 +44,96 @@
 dailyEveryNth=jeden Tag;alle #1 Tage
 repeatDetailsRuleDaily4=jeden Werktag
 
-# LOCALIZATION NOTE (weeklyNthOn):
+# LOCALIZATION NOTE (weeklyNthOnNounclass...)
 # Edit recurrence window -> Recurrence pattern -> Weekly repeat rules
+# Translate these strings according to noun class/gender of weekday (%1$S) 
+# set in 'repeadDetailsDay...Nounclass' strings.
+# Nounclass1 <-> Masculine gender; Nounclass2 <-> Feminine gender.
+# Add others strings with suffix 3, 4,... for others noun classes if your
+# language need them. In this case, corresponding strings must be added for
+# others rule strings with 'Nounclass...' suffix and corresponding values 
+# "nounclass..." must be written in 'repeatDetailsDayxNounclass' strings.
 # %1$S - weekday (one or more)
 # #2 - week interval
 # e.g. "every 3 weeks on Tuesday, Wednesday and Thursday
-weeklyNthOn=jeden %1$S;alle #2 Wochen am %1$S
+weeklyNthOnNounclass1=jeden %1$S;alle #2 Wochen am %1$S
+weeklyNthOnNounclass2=jeden %1$S;alle #2 Wochen am %1$S
 
-# LOCALIZATION NOTE (weeklyNthOn)
+# LOCALIZATION NOTE (weeklyEveryNth):
 # Edit recurrence window -> Recurrence pattern -> Weekly repeat rules
 # #1 - interval
 # e.g. "every 5 weeks"
 weeklyEveryNth=jede Woche;alle #1 Wochen
 
+# LOCALIZATION NOTE ('repeatDetailsDay...' and 'repeatDetailsDay...Nounclass'):
+# Week days names and week days noun classes (feminine/masculine grammatical
+# gender) for languages that need different localization when weekdays nouns
+# have different noun classes (genders).
+# For every weekday, in 'repeatDetailsDay...Nounclass' strings write:
+#   "nounclass1"     for languages with grammatical genders -> MASCULINE gender;
+#                    for languages with noun classes -> a noun class;
+#                    for languages without noun classes or grammatical gender.
+#
+#   "nounclass2"     for languages with grammatical genders -> FEMININE gender;
+#                    for languages with noun classes -> a different noun class.
+#
+#   "nounclass3", "nounclass4" and so on for languages that need more than two 
+#                    noun classes for weekdays. In this case add corresponding
+#                    rule string with "Nounclass..." suffix and ordinal string
+#                    "repeatOrdinalxNounclass..."
+# Will be used rule strings with "Nounclass..." suffix corresponding to the 
+# following strings if there is a weekday in the rule string.
 repeatDetailsDay1=Sonntag
-repeatDetailsDay2=Monatg
+repeatDetailsDay1Nounclass=nounclass1
+repeatDetailsDay2=Montag
+repeatDetailsDay2Nounclass=nounclass1
 repeatDetailsDay3=Dienstag
+repeatDetailsDay3Nounclass=nounclass1
 repeatDetailsDay4=Mittwoch
+repeatDetailsDay4Nounclass=nounclass1
 repeatDetailsDay5=Donnerstag
+repeatDetailsDay5Nounclass=nounclass1
 repeatDetailsDay6=Freitag
+repeatDetailsDay6Nounclass=nounclass1
 repeatDetailsDay7=Samstag
+repeatDetailsDay7Nounclass=nounclass1
 
 # LOCALIZATION NOTE (repeatDetailsAnd)
 # Used to show a number of weekdays in a list
 # i.e. "Sunday, Monday, Tuesday " + and + " Wednesday"
 repeatDetailsAnd=und
 
-# LOCALIZATION NOTE (monthlyNthOfEvery):
+# LOCALIZATION NOTE (monthlyNthOfEveryNounclass...):
 # Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
-# %1$S - ordinal
+# Translate these strings according to noun class/gender of weekday (%2$S) 
+# set in 'repeadDetailsDay...Nounclass' strings.
+# Nounclass1 <-> Masculine gender; Nounclass2 <-> Feminine gender.
+# Add others strings with suffix 3, 4,... for others noun classes if your
+# language need them. In this case, corresponding strings must be added for
+# others rule strings with 'Nounclass...' suffix and corresponding values 
+# "nounclass..." must be written in 'repeatDetailsDayxNounclass' strings. 
+# %1$S - ordinal with article and noun class/gender corresponding to weekday
 # %2$S - weekday
 # #3 - interval
 # i.e. "the FIRST MONDAY of every 3 months"
-monthlyNthOfEvery=am %1$S %2$S jedes Monats;am %1$S %2$S jedes #3. Monats
+monthlyNthOfEveryNounclass1=%1$S %2$S jedes Monats;%1$S %2$S jedes #3. Monats
+monthlyNthOfEveryNounclass2=%1$S %2$S jedes Monats;%1$S %2$S jedes #3. Monats
 
-# LOCALIZATION NOTE (monthlyEveryOfEvery):
+# LOCALIZATION NOTE (monthlyEveryOfEveryNounclass...):
 # Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
+# Translate these strings according to noun class/gender of weekday (%1$S) 
+# set in 'repeadDetailsDay...Nounclass' strings.
+# Nounclass1 <-> Masculine gender; Nounclass2 <-> Feminine gender.
+# Add others strings with suffix 3, 4,... for others noun classes if your
+# language need them. In this case, corresponding strings must be added for
+# others rule strings with 'Nounclass...' suffix and corresponding values 
+# "nounclass..." must be written in 'repeatDetailsDayxNounclass' strings.
 # %1$S - weekday
 # #2 - interval
 # i.e. "every MONDAY of every 3 months" 
 #  more specific: every monday of January, April, July, October
-monthlyEveryOfEvery=jeden %1$S jedes Monats;jeden %1$S jedes #2. Monats
+monthlyEveryOfEveryNounclass1=jeden %1$S jedes Monats;jeden %1$S jedes #2. Monats
+monthlyEveryOfEveryNounclass2=jeden %1$S jedes Monats;jeden %1$S jedes #2. Monats
 
 # LOCALIZATION NOTE (monthlyDayOfNth):
 # Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
@@ -100,12 +149,28 @@ monthlyDayOfNth=Tag %1$S jedes Monats;Tag %1$S jedes #2. Monats
 # e.g. "the last day of every 3 months"
 monthlyLastDayOfNth=am letzten Tag des Monats; am letzten Tag jedes #1 Monats
 
-repeatDetailsOrdinal1=ersten
-repeatDetailsOrdinal2=zweiten
-repeatDetailsOrdinal3=dritten
-repeatDetailsOrdinal4=vierten
-repeatDetailsOrdinal5=fünften
-repeatDetailsOrdinal-1=letzten
+# LOCALIZATION NOTE (repeatOrdinal...Nounclass...):
+# Ordinal numbers nouns for every noun class (grammatical genders) of weekdays
+# considered in 'repeatDetailsDayxNounclass' strings. For languages that need
+# localization according to genders or noun classes.
+# Nounclass1 <-> Masculine gender; Nounclass2 <-> Feminine gender.
+# Add 'repeatOrdinal...Nounclass' strings with suffix 3, 4 and so on for
+# languages with more than two noun classes for weekdays. In this case 
+# must be added corresponding rule strings with 'Nounclass...' suffix and 
+# corresponding values "nounclass..." must be written in
+# 'repeatDetailsDayxNounclass' strings.
+repeatOrdinal1Nounclass1=am ersten
+repeatOrdinal2Nounclass1=am zweiten
+repeatOrdinal3Nounclass1=am dritten
+repeatOrdinal4Nounclass1=am vierten
+repeatOrdinal5Nounclass1=am fünften
+repeatOrdinal-1Nounclass1=am letzten
+repeatOrdinal1Nounclass2=am ersten
+repeatOrdinal2Nounclass2=am zweiten
+repeatOrdinal3Nounclass2=am dritten
+repeatOrdinal4Nounclass2=am vierten
+repeatOrdinal5Nounclass2=am fünften
+repeatOrdinal-1Nounclass2=am letzten
 
 # LOCALIZATION NOTE (yearlyNthOn):
 # Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
@@ -115,24 +180,40 @@ repeatDetailsOrdinal-1=letzten
 # e.g. "every 3 years on December 14"
 yearlyNthOn=jedes Jahr am %2$S. %1$S;alle #3 Jahre am %2$S. %1$S
 
-# LOCALIZATION NOTE (yearlyNthOnNthOf):
+# LOCALIZATION NOTE (yearlyNthOnNthOfNounclass...):
 # Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
-# %1$S - ordinal
+# Translate these strings according to noun class/gender of weekday (%2$S) 
+# set in 'repeadDetailsDay...Nounclass' strings.
+# Nounclass1 <-> Masculine gender; Nounclass2 <-> Feminine gender.
+# Add others strings with suffix 3, 4,... for others noun classes if your
+# language need them. In this case, corresponding strings must be added for
+# others rule strings with 'Nounclass...' suffix and corresponding values 
+# "nounclass..." must be written in 'repeatDetailsDayxNounclass' strings.
+# %1$S - ordinal with article and noun class/gender corresponding to weekday
 # %2$S - weekday
 # %3$S - month
-# #4 - number
+# #4 - yearly interval
 # e.g. "the second Monday of every March"
 # e.g  "every 3 years the second Monday of March"
-yearlyNthOnNthOf=jedes Jahr am %1$S %2$S im %3$S;alle #4 Jahre am %1$S %2$S im %3$S
+yearlyNthOnNthOfNounclass1=jedes Jahr %1$S %2$S im %3$S;alle #4 Jahre %1$S %2$S im %3$S
+yearlyNthOnNthOfNounclass2=jedes Jahr %1$S %2$S im %3$S;alle #4 Jahre %1$S %2$S im %3$S
 
-# LOCALIZATION NOTE (yearlyNthOfNth):
+# LOCALIZATION NOTE (yearlyOnEveryNthOfNthNounclass1):
 # Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
+# Translate these strings according to noun class/gender of weekday (%1$S) 
+# set in 'repeadDetailsDay...Nounclass' strings.
+# Nounclass1 <-> Masculine gender; Nounclass2 <-> Feminine gender.
+# Add others strings with suffix 3, 4,... for others noun classes if your
+# language need them. In this case, corresponding strings must be added for
+# others rule strings with 'Nounclass...' suffix and corresponding values 
+# "nounclass..." must be written in 'repeatDetailsDayxNounclass' strings.
 # %1$S - weekday
 # %2$S - month
-# #3 - number
+# #3 - yearly interval
 # e.g. "every Thursday of March"
 # e.g  "every 3 years on every Thursday of March"
-yearlyOnEveryNthOfNth=jeden %1$S im %2$S;alle #3 Jahre jeden %1$S im %2$S
+yearlyOnEveryNthOfNthNounclass1=jeden %1$S im %2$S;alle #3 Jahre jeden %1$S im %2$S
+yearlyOnEveryNthOfNthNounclass2=jeden %1$S im %2$S;alle #3 Jahre jeden %1$S im %2$S
 
 repeatDetailsMonth1=Januar
 repeatDetailsMonth2=Februar
@@ -149,12 +230,12 @@ repeatDetailsMonth12=Dezember
 
 # LOCALIZATION NOTE (repeatCount):
 # Edit recurrence window -> Recurrence details link on Event/Task dialog window
-# %1%$ - repeatDetailsRule...(see above). This is the first line of the link
+# %1%$ - A rule string (see above). This is the first line of the link
 # %2%$ - event start date (e.g. mm/gg/yyyy)
 # %3$S - event start time (e.g. hh:mm (PM/AM))
 # %4$S - event end time (e.g. hh:mm (PM/AM))
 # #5 - event occurence times: number
-# e.g. with repeatDetailsRuleMonthly3:
+# e.g. with monthlyNthOfEvery:
 # "Occurs the first Sunday of every 3 month
 #  only on 1/1/2009"
 #  from 5:00 PM to 6:00 PM"
@@ -165,10 +246,10 @@ repeatCount=Wiederholt sich %1$S\nab dem %2$S für #5 Wiederholungen\nvon %3$S t
 
 # LOCALIZATION NOTE (repeatCountAllDay):
 # Edit recurrence window -> Recurrence details link on Event/Task dialog window
-# %1%$ - repeatDetailsRule...(see above). This is the first line of the link
+# %1%$ - A rule string (see above). This is the first line of the link
 # %2%$ - event start date (e.g. mm/gg/yyyy)
 # #3 - event occurence times: number
-# e.g. with repeatDetailsRuleMonthly3:
+# e.g. with monthlyNthOfEvery:
 # "Occurs the first Sunday of every 3 month
 #  only on 1/1/2009"
 # "Occurs the first Sunday of every 3 month
@@ -177,41 +258,44 @@ repeatCountAllDay=Wiederholt sich %1$S\nab dem %2$S für #3 Wiederholung.;Wieder
 
 # LOCALIZATION NOTE (repeatDetailsUntil):
 # Edit recurrence window -> Recurrence details link on Event/Task dialog window
-# %1%$ - repeatDetailsRule...(see above). This is the first line of the link
+# %1%$ - A rule string (see above). This is the first line of the link
 # %2%$ - event start date (e.g. mm/gg/yyyy)
 # %3$S - event end date (e.g. mm/gg/yyyy)
 # %4$S - event start time (e.g. hh:mm (PM/AM))
 # %5$S - event end time (e.g. hh:mm (PM/AM))
-# e.g. with repeatDetailsRuleWeekly2:
-# "Occurs every other week on Sunday and Friday
+# e.g. with weeklyNthOn:
+# "Occurs every 2 weeks on Sunday and Friday
 #  effective 1/1/2009 until 1/1/2010 
 #  from 5:00 PM to 6:00 PM"
 repeatDetailsUntil=Wiederholt sich %1$S\nab dem %2$S bis %3$S\nvon %4$S bis %5$S.
+
 # LOCALIZATION NOTE (repeatDetailsUntilAllDay):
 # Edit recurrence window -> Recurrence details link on Event/Task dialog window
-# %1%$ - repeatDetailsRule...(see above). This is the first line of the link
+# %1%$ - A rule string (see above). This is the first line of the link
 # %2%$ - event start date (e.g. mm/gg/yyyy)
 # %3$S - event end date (e.g. mm/gg/yyyy)
-# e.g. with repeatDetailsRuleMonthly6 and all day event:
+# e.g. with monthlyDayOfNth and all day event:
 # "Occurs day 3 of every 5 month
 #  effective 1/1/2009 until 1/1/2010"
 repeatDetailsUntilAllDay=Wiederholt sich %1$S\nab dem %2$S bis %3$S.
+
 # LOCALIZATION NOTE (repeatDetailsInfinite):
 # Edit recurrence window -> Recurrence details link on Event/Task dialog window
-# %1%$ - repeatDetailsRule...(see above). This is the first line of the link
+# %1%$ - A rule string (see above). This is the first line of the link
 # %2%$ - event start date (e.g. mm/gg/yyyy)
 # %3$S - event start time (e.g. hh:mm (PM/AM))
 # %4$S - event end time (e.g. hh:mm (PM/AM))
-# e.g. with repeatDetailsRuleMonthly6:
+# e.g. with monthlyDayOfNth:
 # "Occurs day 3 of every 5 month
 #  effective 1/1/2009
 #  from 5:00 PM to 6:00 PM"
 repeatDetailsInfinite=Wiederholt sich %1$S\nab dem %2$S\nvon %3$S bis %4$S.
+
 # LOCALIZATION NOTE (repeatDetailsInfiniteAllDay):
 # Edit recurrence window -> Recurrence details link on Event/Task dialog window
-# %1%$ - repeatDetailsRule...(see above). This is the first line of the link
+# %1%$ - A rule string (see above). This is the first line of the link
 # %2%$ - event start date (e.g. mm/gg/yyyy)
-# e.g. with repeatDetailsRuleMonthly6 and all day event:
+# e.g. with monthlyDayOfNth and all day event:
 # "Occurs day 3 of every 5 month
 #  effective 1/1/2009"
 repeatDetailsInfiniteAllDay=Wiederholt sich %1$S\nab dem %2$S.
@@ -240,8 +324,8 @@ removeCalendarsText=Möchten Sie wirklich %1$S Anhänge löschen?
 # Recurrence Dialog Widget Order
 # LOCALIZATION NOTE: You can change the order of below params
 # Edit recurrence window -> Recurrence pattern -> Repeat monthly
-# %1$S - ordinal, %2$S - weekday
-# e.g. "First Saturday"
+# %1$S - ordinal with article, %2$S - weekday
+# e.g. "the First Saturday"
 monthlyOrder=%1$S %2$S
 
 # Edit recurrence window -> Recurrence pattern -> Repeat yearly
@@ -251,7 +335,7 @@ monthlyOrder=%1$S %2$S
 yearlyOrder=%1$S %3$S %2$S
 
 # Edit recurrence window -> Recurrence pattern -> Repeat yearly
-# %1$S - ordinal, %2$S - weekday, %3$S  - of, %4$S - month
-# e.g. "First Saturday of September"
+# %1$S - ordinal with article, %2$S - weekday, %3$S  - of, %4$S - month
+# e.g. "the First Saturday of September"
 # If you don't need %3$S in your locale - please put this on the third place.
 yearlyOrder2=%1$S %2$S %3$S %4$S
