--- a/sv-SE/calendar/chrome/calendar/providers/gdata/gdata.properties
+++ b/sv-SE/calendar/chrome/calendar/providers/gdata/gdata.properties
@@ -19,7 +19,7 @@
 # the Initial Developer. All Rights Reserved.
 #
 # Contributor(s):
-   -	Stefan Lewitas <stefan.lewitas@gmail.com>
+#   Stefan Lewitas <stefan.lewitas@gmail.com>
 # Alternatively, the contents of this file may be used under the terms of
 # either the GNU General Public License Version 2 or later (the "GPL"), or
 # the GNU Lesser General Public License Version 2.1 or later (the "LGPL"),
