http://people.mozilla.com/~dynamis/lot/20090427/errorlog.summary.txt#he

--- a/he/calendar/chrome/calendar/calendar.properties
+++ b/he/calendar/chrome/calendar/calendar.properties
@@ -70,7 +70,7 @@ Untitled=ללא שם
 #    /etc/timezone or /etc/sysconfig/clock contains ZoneInfo timezone id).
 # - Windows: turning off "Automatically adjust clock for daylight saving time"
 #   can also trigger this warning.
-WarningOSTZNoMatch=אזהרה: איזור הזמן "%!$S" של מערכת ההפעלה\nלא תואם את איזור הזמן הפנימי "%2$S".
+WarningOSTZNoMatch=אזהרה: איזור הזמן "%1$S" של מערכת ההפעלה\nלא תואם את איזור הזמן הפנימי "%2$S".
 # "Warning:  Using guessed timezone
 #    America/New York (UTC-0500/-0400).
 #    [rfc2445 summer daylight saving shift rules for timezone]
@@ -175,7 +175,7 @@ dayIntervalBetweenYears=%2$S ב%1$S %3$S - %5$S ב%4$S %6$S
 #    %2$S will be replaced with the day-index of the start date
 #    %3$S will be replaced with the day-index of the end date
 #    %4$S will be replaced with the common year of both dates
-dayIntervalInMonth=%2$S - %1$S ב%1$S %4$S
+dayIntervalInMonth=%2$S - %3$S ב%1$S %4$S
 
 deleteEventAccesskey=מ
 deleteEventLabel=מחק אירוע
