bug 438429: meta bug to fix several RSS Summary/Web Page bugs;

--- a/de/mail/chrome/messenger/messenger.properties
+++ b/de/mail/chrome/messenger/messenger.properties
@@ -311,6 +311,8 @@ nocachedbodytitle=<TITLE>Gehen Sie Online, um diese Nachricht anzusehen</TITLE>\
 # mailWindowOverlay.js
 confirmUnsubscribeTitle=Abbestellen bestätigen
 confirmUnsubscribeText=Soll %S wirklich abbestellt werden?
+feedNoSummaryTitle=Keine Feed-Zusammenfassung
+feedNoSummaryAlert=Dies ist ein News-Feed in einem älteren Format, das keine Zusammenfassung der Feed-Artikel enthält. Daher kann diese nicht angezeigt werden.
 
 # msgHdrViewOverlay.js
 openLabel=Öffnen
