--- a/pl/mail/chrome/messenger/messenger.properties
+++ b/pl/mail/chrome/messenger/messenger.properties
@@ -251,6 +251,8 @@ newsAcctType            = Grupy dyskusyjne
 nocachedbodytitle       = <TITLE>Aby wyświetlić tę wiadomość należy przejść do trybu online</TITLE>\n
 confirmUnsubscribeTitle = Potwierdź rezygnację z subskrypcji
 confirmUnsubscribeText  = Czy na pewno zrezygnować z subskrypcji %S?
+feedNoSummaryTitle      = Brak treści artykułu
+feedNoSummaryAlert      = Źródło subskrypcji jest w starym formacie, który nie zawiera treści artykułów dlatego też, nie może zostać wyświetlona.
 openLabel               = Otwórz
 openLabelAccesskey      = O
 saveLabel               = Zapisz jako…
