--- a/fr/calendar/chrome/calendar/calendar-event-dialog.properties
+++ b/fr/calendar/chrome/calendar/calendar-event-dialog.properties
@@ -145,7 +145,7 @@ monthlyDayOfNth=le %1$S de chaque mois;le %1$S un mois sur #2
 # %1$S - day of month
 # #2 - month interval
 # e.g. "the last day of every 3 months"
-monthlyLastDayOfNth=le dernier jour du mois;tous les #1 mois le dernier jours du mois
+monthlyLastDayOfNth=le dernier jour du mois;tous les #1 mois le dernier jour du mois
 
 # LOCALIZATION NOTE (repeatOrdinal...Nounclass...):
 # Ordinal numbers nouns for every noun class (grammatical genders) of weekdays
