--- a/pl/suite/chrome/common/pref/pref-applications.properties
+++ b/pl/suite/chrome/common/pref/pref-applications.properties
@@ -20,9 +20,9 @@ alwaysAsk=Zawsze pytaj
 # %2$S = brandShortName from brand.properties (for example "Minefield")
 usePluginIn=Wtyczka %S (w programie %S)
 
-# LOCALIZATION NOTE (previewInApp, addLiveBookmarksInApp): %S = brandShortName
+# LOCALIZATION NOTE (previewInApp, addNewsBlogsInApp): %S = brandShortName
 previewInApp=Podgląd w programie %S
-addLiveBookmarksInApp=Dodaj dynamiczną zakładkę w programie %S
+addNewsBlogsInApp=Subskrybuj w programie %S
 
 # LOCALIZATION NOTE (typeDescriptionWithType):
 # %1$S = type description (for example "Portable Document Format")
