L10n for: bug 438429: meta bug to fix several RSS Summary/Web Page bugs (suite)

--- a/pl/suite/chrome/mailnews/messenger.properties
+++ b/pl/suite/chrome/mailnews/messenger.properties
@@ -308,6 +308,8 @@ nocachedbodytitle=<TITLE>Aby wyświetlić tę wiadomość należy przejść do t
 # mailWindowOverlay.js
 confirmUnsubscribeTitle=Potwierdź rezygnację z subskrypcji
 confirmUnsubscribeText=Czy na pewno zrezygnować z subskrypcji %S?
+feedNoSummaryTitle=Brak treści artykułu
+feedNoSummaryAlert=Źródło subskrypcji jest w starym formacie, który nie zawiera treści artykułów dlatego też, nie może zostać wyświetlona.
 
 # msgHdrViewOverlay.js
 deleteAttachments=Następujące załączniki zostaną nieodwracalnie usunięte z tej wiadomości:\n%S\nCzynności tej nie można cofnąć. Czy kontynuować?
