Update nb-NO l10n

--- a/nb-NO/mail/chrome/messenger/messenger.properties
+++ b/nb-NO/mail/chrome/messenger/messenger.properties
@@ -314,6 +314,8 @@ nocachedbodytitle=<TITLE>Gå til tilkoblet modus for å se denne meldingen</TITL
 # mailWindowOverlay.js
 confirmUnsubscribeTitle=Bekreft avmelding
 confirmUnsubscribeText=Er du sikker på at du vil melde deg ut fra %S?
+feedNoSummaryTitle=Ingen nyhetskildeoppsummering
+feedNoSummaryAlert=Denne nyhetskilden har et gammelt format som ikke viser oppsummeringen av nyhetsmeldingen. Den kan derfor ikke vises.
 
 # msgHdrViewOverlay.js
 openLabel=Åpne
