L10n for bug 480674 - Formulate content policy for Audio/Video tags.

--- a/sv-SE/mail/chrome/messenger/messenger.properties
+++ b/sv-SE/mail/chrome/messenger/messenger.properties
@@ -453,8 +453,8 @@ moveToFolderAgainAccessKey=t
 copyToFolderAgain=Kopiera till ”%1$S” igen
 copyToFolderAgainAccessKey=t
 
-#LOCALIZATION NOTE %1$S is the e-mail address of the person we will allow remote images for
-alwaysLoadRemoteContentForSender1=Hämta alltid externa bilder från %1$S.
+#LOCALIZATION NOTE %1$S is the e-mail address of the person we will allow remote content for
+alwaysLoadRemoteContentForSender2=Hämta alltid externt innehåll från %1$S.
 
 # Strings for growl notifications on Mac OS X
 growlNotification=Ny e-post
