--- a/pl/browser/chrome/browser/browser.properties
+++ b/pl/browser/chrome/browser/browser.properties
@@ -167,15 +167,19 @@ editBookmarkPanel.editBookmarkTitle=Edytuj tę zakładkę
 editBookmark.removeBookmarks.label=Usuń zakładkę;Usuń zakładki (#1);Usuń zakładki (#1)
 
 # Geolocation UI
-geolocation.tellThem=Przekaż informacje
-geolocation.tellThemKey=e
-geolocation.dontTellThem=Nie przekazuj
-geolocation.dontTellThemKey=N
+
+# LOCALIZATION NOTE (geolocation.shareLocation geolocation.dontShareLocation): 
+#If you're having trouble with the word Share, please use Allow and Block in your language.
+geolocation.shareLocation=Udostępnij położenie
+geolocation.shareLocation.accesskey=e
+geolocation.dontShareLocation=Nie udostępniaj
+geolocation.dontShareLocation.accesskey=N
 geolocation.siteWantsToKnow=%S chce poznać położenie geograficzne użytkownika.
 # LOCALIZATION NOTE (geolocation.learnMore): Use the unicode ellipsis char, \u2026,
 # or use "..." unless \u2026 doesn't suit traditions in your locale.
 geolocation.learnMore=Więcej informacji…
 geolocation.remember=Zapamiętaj dla tej witryny
+geolocation.remember.accesskey=a
 
 # Phishing/Malware Notification Bar.
 # LOCALIZATION NOTE (notAForgery, notAnAttack)
