Update nb-NO l10n

--- a/nb-NO/mail/chrome/messenger/messenger.properties
+++ b/nb-NO/mail/chrome/messenger/messenger.properties
@@ -43,6 +43,8 @@ newFolderMenuItem=Mappe …
 newSubfolderMenuItem=Undermappe …
 newFolder=Ny mappe …
 newSubfolder=Ny undermappe …
+markFolderRead=Merk mappen som lest;Merk mappene som lest
+markNewsgroupRead=Merk nyhetsgruppen som lest;Merk nyhetsgruppene som lest
 folderProperties=Mappealternativer
 newTag=Ny etikett …
 getNextNMessages=Hent neste %S nyhetsgruppemeldinger
@@ -314,8 +316,9 @@ nocachedbodytitle=<TITLE>Gå til tilkoblet modus for å se denne meldingen</TITL
 # mailWindowOverlay.js
 confirmUnsubscribeTitle=Bekreft avmelding
 confirmUnsubscribeText=Er du sikker på at du vil melde deg ut fra %S?
+confirmUnsubscribeManyText=Er du sikker på at du vil melde deg ut fra disse nyhetsgruppene?
 feedNoSummaryTitle=Ingen nyhetskildeoppsummering
-feedNoSummaryAlert=Denne nyhetskilden har et gammelt format som ikke viser oppsummeringen av nyhetsmeldingen. Den kan derfor ikke vises.
+feedNoSummaryAlert=Denne nyhetskilden har et gammelt format som ikke inneholder oppsummeringen av nyhetsmeldingen. Den kan derfor ikke vises.
 
 # msgHdrViewOverlay.js
 openLabel=Åpne
