--- a/nb-NO/mail/chrome/messenger/messengercompose/composeMsgs.properties
+++ b/nb-NO/mail/chrome/messenger/messengercompose/composeMsgs.properties
@@ -77,13 +77,13 @@
 12512=Klarte ikke skrive til midlertidig fil.
 
 ## @name NS_ERROR_SENDING_FROM_COMMAND
-12514=En feil oppstod ved sending av e-post. E-posttjeneren svarte\: %s. Kontroller at e-postadressen er korrekt i kontoinnstillingene og prøv igjen.
+12514=En feil oppstod ved sending av e-post. E-posttjeneren svarte: %s. Kontroller at e-postadressen er korrekt i kontoinnstillingene og prøv igjen.
 
 ## @name NS_ERROR_SENDING_DATA_COMMAND
-12516=En SMTP-feil oppstod ved sending av e-post. Tjeneren svarte\: %s.
+12516=En SMTP-feil oppstod ved sending av e-post. Tjeneren svarte: %s.
 
 ## @name NS_ERROR_SENDING_MESSAGE
-12517=En feil oppstod ved sending av e-post. E-posttjeneren svarte\: %s. Kontroller meldingen og prøv igjen.
+12517=En feil oppstod ved sending av e-post. E-posttjeneren svarte: %s. Kontroller meldingen og prøv igjen.
 
 ## @name NS_ERROR_POST_FAILED
 12518=Klarte ikke poste meldingen, på grunn av at tilkoblingen til nyhetsgruppetjeneren feilet. Tjeneren kan være utilgjengelig akkurat nå. Kontroller innstillingene for nyhetsgrupper og prøv igjen, eller kontakt nettverksansvarlig for hjelp.
@@ -104,22 +104,22 @@
 12523=E-post sendt
 
 ## @name NS_ERROR_SMTP_SERVER_ERROR
-12524=En feil oppstod ved sending av e-post\: SMTP-tjenerfeil. Tjeneren svarte\: %s Kontakt e-postansvarlig for hjelp.
+12524=En feil oppstod ved sending av e-post: SMTP-tjenerfeil. Tjeneren svarte:  %s Kontakt e-postansvarlig for hjelp.
 
 ## @name NS_MSG_UNABLE_TO_SEND_LATER
 12525=Klarte ikke lagre meldingen for å sende den senere.
 
 ## @name NS_ERROR_COMMUNICATIONS_ERROR
-12526=En kommunikasjonsfeil har oppstått\: %d. Prøv igjen.
+12526=En kommunikasjonsfeil har oppstått: %d.  Prøv igjen.
 
 ## @name NS_ERROR_BUT_DONT_SHOW_ALERT
 12527=THIS IS JUST A PLACEHOLDER.  YOU SHOULD NEVER SEE THIS STRING.
 
 ## @name NS_ERROR_TCP_READ_ERROR
-12528=En nettverksfeil oppstod under mottak av data. (Nettverksfeil\: %s) Prøv å koble til igjen.
+12528=En nettverksfeil oppstod under mottak av data. (Nettverksfeil: %s) Prøv å koble til igjen.
 
 ## @name NS_ERROR_COULD_NOT_GET_USERS_MAIL_ADDRESS
-12529=En feil oppstod under sending av e-post\: returadressen var ugyldig. Kontroller at e-postadressen er korrekt i innstillingene for E-post og Nyhetsgrupper, og prøv igjen.
+12529=En feil oppstod under sending av e-post: returadressen var ugyldig. Kontroller at e-postadressen er korrekt i innstillingene for E-post og Nyhetsgrupper, og prøv igjen.
 
 ## @name NS_ERROR_MIME_MPART_ATTACHMENT_ERROR
 12531=Vedleggsfeil.
@@ -155,10 +155,10 @@
 12541=Advarsel\! Du vil nå sende en melding som er %d byte stor. Er du sikker på at du vil gjøre dette?
 
 ## @name NS_SMTP_PASSWORD_PROMPT1
-12543=Skriv inn passordet ditt for %S\:
+12543=Skriv inn passordet ditt for %S:
 
 ## @name NS_SMTP_PASSWORD_PROMPT2
-12544=Skriv inn passordet for %S på %S\:
+12544=Skriv inn passordet for %S på %S:
 
 ## @name NS_SMTP_CONNECTING_TO_SERVER
 12545=Kobler til tjener …
@@ -272,7 +272,7 @@ defaultSubject=(uten emne)
 chooseFileToAttach=Legg ved fil(er)
 
 ##
-windowTitlePrefix=E-post\:
+windowTitlePrefix=E-post:
 
 ## String used by the dialog that ask the user to enter a subject
 sendMsgTitle=Send melding
@@ -285,7 +285,7 @@ recipientDlogMessage=Denne kontoen støtter bare e-postmottakere. Dersom du fort
 addressInvalid=%1$S er ikke en gyldig e-postadresse, fordi den er ikke på formen bruker@vert. Du må korrigere den før du sender e-posten.
 ## String used by the dialog that ask the user to attach a web page
 attachPageDlogTitle=Velg et nettsted for å legge ved
-attachPageDlogMessage=Nettside (URL)\:
+attachPageDlogMessage=Nettside (URL):
 
 ## String used for attachment pretty name, when attachment is a message
 messageAttachmentSafeName=Vedlagt melding
@@ -327,3 +327,13 @@ mailnews.reply_header_originalmessage=-------- Opprinnelig melding --------
 ## Strings used by the rename attachment dialog
 renameAttachmentTitle=Endre navn på vedlegg
 renameAttachmentMessage=Nytt navn på vedlegget:
+
+## Attachment Reminder
+## LOCALIZATION NOTE (mail.compose.attachment_reminder_keywords): comma separated
+##   words that that should trigger an attachment reminder.
+mail.compose.attachment_reminder_keywords=vedlegg,vedlagt,resyme,søknad,attachment,attached,.doc,.pdf,resume,cover letter
+attachmentReminderTitle=Vedleggspåminnelse
+attachmentReminderMsg=Glemte du å legge ved en fil?
+attachmentReminderYesIForgot=Åh, ja, det glemte jeg!
+attachmentReminderFalseAlarm=Nei, send nå
+
