--- a/de/mail/chrome/messenger/preferences/preferences.properties
+++ b/de/mail/chrome/messenger/preferences/preferences.properties
@@ -42,3 +42,9 @@ soundFilePickerTitle=Klang auswählen
 #### Shell Service
 alreadyDefaultClientTitle=Standard-Anwendung
 alreadyDefault=%S ist bereits Ihre Standard-Anwendung für E-Mail
+
+#### Attachment Reminder
+attachmentReminderAddDialogTitle=Schlüsselwort hinzufügen
+attachmentReminderAddText=Schlüsselwort:
+attachmentReminderEditDialogTitle=Schlüsselwort bearbeiten
+attachmentReminderEditText=Schlüsselwort:
