Change "nachrichtenvorschau" > "nachrichtenbereich" - in fact it isn't a preview

--- a/de/mail/chrome/messenger/messenger.properties
+++ b/de/mail/chrome/messenger/messenger.properties
@@ -184,7 +184,7 @@ specialFolderDeletionErrTitle=Löschen eines speziellen Ordners
 # depending on the consumers of these strings
 priorityLowest=Sehr niedrig
 priorityLow=Niedrig
-priorityNormal=normal
+priorityNormal=Normal
 priorityHigh=Hoch
 priorityHighest=Sehr hoch
 
