Bug 296655: selection of multiple mailboxes/folders in the folders pane is possible but not usable.

--- a/de/mail/chrome/messenger/messenger.properties
+++ b/de/mail/chrome/messenger/messenger.properties
@@ -44,6 +44,8 @@ newFolderMenuItem=Ordner…
 newSubfolderMenuItem=Unterordner…
 newFolder=Neuer Ordner…
 newSubfolder=Neuer Unterordner…
+markFolderRead=Ordner als gelesen markieren;Ordner als gelesen markieren
+markNewsgroupRead=Newsgruppe als gelesen markieren;Newsgruppen als gelesen markieren
 folderProperties=Eigenschaften
 newTag=Neues Schlagwort…
 getNextNMessages=Nächste %S News-Beiträge abrufen
@@ -311,6 +313,7 @@ nocachedbodytitle=<TITLE>Gehen Sie Online, um diese Nachricht anzusehen</TITLE>\
 # mailWindowOverlay.js
 confirmUnsubscribeTitle=Abbestellen bestätigen
 confirmUnsubscribeText=Soll %S wirklich abbestellt werden?
+confirmUnsubscribeManyText=Wirklich alle gewählten Newsgruppen abbestellen?
 feedNoSummaryTitle=Keine Feed-Zusammenfassung
 feedNoSummaryAlert=Dies ist ein News-Feed in einem älteren Format, das keine Zusammenfassung der Feed-Artikel enthält. Daher kann diese nicht angezeigt werden.
 
