L10n for bug 296655 - Selection of multiple mailboxes/folders in the folders pane is possible but not usable.

--- a/sv-SE/mail/chrome/messenger/messenger.properties
+++ b/sv-SE/mail/chrome/messenger/messenger.properties
@@ -46,6 +46,8 @@ newFolderMenuItem=Ny mapp…
 newSubfolderMenuItem=Ny undermapp…
 newFolder=Ny mapp…
 newSubfolder=Ny undermapp…
+markFolderRead=Märk mappen som läst;Märk mapparna som lästa
+markNewsgroupRead=Märk diskussionsgruppen som läst;Märk diskussionsgrupperna som lästa
 folderProperties=Mappens egenskaper
 newTag=Ny etikett…
 getNextNMessages=Hämta nästa %S diskussionsgruppinlägg
@@ -315,7 +317,8 @@ nocachedbodytitle=<TITLE>Du måste välja att arbeta uppkopplad för att se dett
 
 # mailWindowOverlay.js
 confirmUnsubscribeTitle=Bekräfta avslut
-confirmUnsubscribeText=Är de säker att du vill avsluta prenumerationen från %S?
+confirmUnsubscribeText=Är du säker att du vill avsluta prenumerationen på %S?
+confirmUnsubscribeManyText=Är du säker på att du vill avsluta prenumerationen på dessa diskussionsgrupper?
 feedNoSummaryTitle=Ingen flödessammanfattning
 feedNoSummaryAlert=Det här är ett nyhetsflöde i ett gammalt format som inte lagrar någon sammanfattning av nyhetsposterna. Det kan därför inte visas.
 
